AI-JADEDEVS4/src/objects/NetExamUserCourses_old__c.object
<CustomObject>
    <description>NetExamUserCourses</description>
    <fields>
        <fullName>Course_Completed_Date__c</fullName>
        <description>Course Completed Date</description>
        <label>Course Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Enrolled_Date__c</fullName>
        <description>Course Enrolled Date</description>
        <label>Course Enrolled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Expiration_Date__c</fullName>
        <description>Course Expiration Date</description>
        <formula>Course_Completed_Date__c + Days_Valid__c</formula>
        <label>Course Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_ID__c</fullName>
        <description>Course ID</description>
        <formula>Course__r.Course_Id__c</formula>
        <label>Course ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <formula>Course__r.Course_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Score__c</fullName>
        <description>Course Score</description>
        <label>Course Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Course_Status__c</fullName>
        <description>Course Status</description>
        <formula>IF( Course_Expiration_Date__c &lt; TODAY() , &quot;Expired&quot;, 
IF( Course_Expiration_Date__c &gt;= TODAY() ,&quot;Completed&quot;, 
IF(NetExam_Course_Status__c == &quot;Failed&quot;, &quot;Failed&quot;, 
BLANKVALUE( NetExam_Course_Status__c , &quot;Enrolled&quot;) ) ) )</formula>
        <label>Course Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Course</description>
        <label>Course</label>
        <referenceTo>NE_Course_old__c</referenceTo>
        <relationshipName>NetExamUserCourses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Valid__c</fullName>
        <description>Days Valid</description>
        <formula>IF( ISBLANK( Course_Completed_Date__c ) , NULL, 365)</formula>
        <label>Days Valid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetExam_Course_Status__c</fullName>
        <description>NetExam Course Status</description>
        <label>NetExam Course Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Price</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NE FairSail Integration by Keth</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NetExamUserCourses_old</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>NetExam UserCourses_old</label>
    <nameField>
        <displayFormat>NE-{00000000}</displayFormat>
        <label>NetExamUserCourses Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NetExamUserCourses_old</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>